# pipebase

./: .gitignore  Cargo.toml  README.md
cargo-pipe/: Cargo.toml  README.md
cargo-pipe/resources/: pipe.yml  timer
cargo-pipe/resources/app/: pipe.yml
cargo-pipe/resources/catalogs/: timer2.yml
cargo-pipe/src/: config.rs  errors.rs  main.rs  print.rs
cargo-pipe/src/commands/: build.rs  check.rs  describe.rs  generate.rs  init.rs  mod.rs  new.rs  remove.rs  validate.rs
cargo-pipe/src/ops/: do_build.rs  do_cargo.rs  do_check.rs  do_describe.rs  do_generate.rs  do_init.rs  do_new.rs  do_remove.rs  do_validate.rs  mod.rs  utils.rs
e2e/clients/: Cargo.toml
e2e/clients/src/: constants.rs  cqlcli.rs  httpcli.rs  lib.rs  mysqlcli.rs  psqlcli.rs  rediscli.rs  utils.rs
e2e/ingest_mysql/: Cargo.toml  docker-compose.yml  entry.json  pipe.yml  record.json  records.json
e2e/ingest_mysql/catalogs/: batch_mysql_writer.yml  ingestion_server.yml  mysql_writer.yml
e2e/ingest_mysql/resources/: mysqlcli.yml
e2e/ingest_mysql/src/: lib.rs
e2e/ingest_mysql/tests/: batch_context3.txt  context3.txt  query_result0.txt  query_result1.txt  query_result2.txt  test_batch_context.json  test_batch_ingestion.json  test_batch_query_result.json  test_context.json  test_ingestion.json  test_query_result.json  test_setup.json  test_shutdown.json
e2e/ingest_postgres/: Cargo.toml  docker-compose.yml  entry.json  pipe.yml  record.json  records.json
e2e/ingest_postgres/catalogs/: batch_psql_writer.yml  psql_writer.yml
e2e/ingest_postgres/resources/: psqlcli.yml
e2e/ingest_postgres/src/: lib.rs
e2e/ingest_postgres/tests/: batch_context1.txt  batch_context3.txt  context2.txt  context3.txt  query_result0.txt  query_result1.txt  query_result2.txt  query_table0.txt  test_batch_context.json  test_batch_ingestion.json  test_batch_query_result.json  test_context.json  test_create_table.json  test_ingestion.json  test_query_result.json  test_query_table.json  test_shutdown.json
e2e/pubsub_mqtt/: Cargo.toml  docker-compose.yml  entry.json  pipe.yml
e2e/pubsub_mqtt/catalogs/: mqtt_publisher.yml  mqtt_subscriber.yml
e2e/pubsub_mqtt/src/: lib.rs
e2e/pubsub_mqtt/tests/: context3.txt  context4.txt  test_context.json  test_ingestion.json  test_redis.json  test_setup.json  test_shutdown.json
pipebase/: Cargo.toml  README.md
pipebase/resources/catalogs/: bag_collector.yml  context_printer.yml  file_split_streamer.yml  file_writer.yml  local_file_visitor.yml  random_selector.yml  set_collector.yml  text_splitter.yml  timer.yml  top_aggregator.yml  top_aggregator_asc.yml  window.yml
pipebase/resources/test_file_stream/: test_file_1.txt
pipebase/src/: bootstrap.rs  config.rs  context.rs  error.rs  lib.rs  pipe.rs  prelude.rs  utils.rs
pipebase/src/collect/: bag.rs  mod.rs  runtime.rs  set.rs  text.rs  window.rs
pipebase/src/common/: bag.rs  bootstrap.rs  config.rs  context.rs  convert.rs  error.rs  field.rs  filter.rs  logging.rs  mod.rs  period.rs  pipe.rs  project.rs  render.rs  set.rs  split.rs  time.rs  value.rs
pipebase/src/context/: mod.rs  print.rs  runtime.rs
pipebase/src/error/: mod.rs  print.rs  runtime.rs
pipebase/src/export/: mod.rs  print.rs  runtime.rs
pipebase/src/fanout/: broadcast.rs  hash.rs  mod.rs  random.rs  roundrobin.rs  select.rs
pipebase/src/listen/: file.rs  mod.rs  runtime.rs
pipebase/src/map/: add.rs  conversion.rs  echo.rs  field.rs  file.rs  filter.rs  mod.rs  project.rs  runtime.rs  sort.rs  split.rs
pipebase/src/poll/: mod.rs  runtime.rs  timer.rs
pipebase/src/process/: echo.rs  field.rs  filter.rs  mod.rs  project.rs
pipebase/src/processor/: echo.rs  mod.rs  project.rs
pipebase/src/select/: hash.rs  mod.rs  random.rs  roundrobin.rs  runtime.rs
pipebase/src/sink/: mod.rs  print.rs  render.rs  sql.rs
pipebase/src/source/: mod.rs  timer.rs
pipebase/src/stream/: file.rs  iterator.rs  mod.rs  runtime.rs
pipederive/: Cargo.toml  README.md
pipederive/src/: aggregate.rs  attribute.rs  bootstrap.rs  constants.rs  context.rs  convert.rs  equal.rs  field.rs  filter.rs  group.rs  hashedby.rs  hashkey.rs  leftright.rs  lib.rs  orderedby.rs  orderkey.rs  project.rs  psql.rs  render.rs  sql.rs  utils.rs
pipederive/src/pipemeta/: meta.rs  mod.rs  visitmeta.rs
pipeext/: Cargo.toml
pipeext/resources/: pipe.yml
pipeext/resources/catalogs/: rabbitmq_consumer.yml  rocksdb.yml
pipeext/src/: lib.rs
pipeext/src/context/: server.rs
pipeext/src/export/: cql.rs  kv.rs  mod.rs  postgrescli.rs  sql.rs
pipeext/src/listen/: mod.rs  rabbitmq.rs  rest.rs
pipeext/src/map/: mod.rs
pipeext/src/poll/: rabbitmq.rs
pipeext/src/procedure/: serde.rs
pipeext/src/source/: rabbitmq.rs
pipeext/src/utils/: mod.rs  psqlclient.rs  redisclient.rs  rocksdbclient.rs
pipegen/: Cargo.toml  README.md
pipegen/resources/manifest/: bad_name_case_pipe.yml  bad_object_ty_case_pipe.yml  complex_object.yml  complex_object_pipe.yml  cycle_dependency_pipe.yml  duplicate_data_field_name_pipe.yml  duplicate_name_pipe.yml  duplicate_object_ty_pipe.yml  duplicated_upstream_pipe.yml  invalid_exporter_output.yml  invalid_source_dependency_pipe.yml  no_upstream_downstream_pipe.yml  non_exists_object_pipe.yml  non_exists_upstream_pipe.yml  simple_app.yml  (+9 more)
pipegen/src/: error.rs  lib.rs
pipeware/pipeamqp/: Cargo.toml  README.md
pipeware/pipeavro/: Cargo.toml  README.md
pipeware/pipebytes/: Cargo.toml  README.md
pipeware/pipecql/: Cargo.toml  README.md
pipeware/pipecsv/: Cargo.toml  README.md
pipeware/pipedynamodb/: Cargo.toml  README.md
pipeware/pipekafka/: Cargo.toml  README.md
pipeware/pipekube/: Cargo.toml  README.md
pipeware/pipemqtt/: Cargo.toml  README.md
pipeware/pipemysql/: Cargo.toml  README.md
pipeware/pipepsql/: Cargo.toml  README.md
pipeware/piperedis/: Cargo.toml  README.md
pipeware/pipereqwest/: Cargo.toml  README.md
pipeware/piperocksdb/: Cargo.toml  README.md
pipeware/pipes3/: Cargo.toml  README.md
pipeware/pipesns/: Cargo.toml  README.md
pipeware/pipesqs/: Cargo.toml  README.md
pipeware/pipewarp/: Cargo.toml  README.md
(+474 files in other folders)
