[workspace]

members = [
	"cargo-pipe",
	"pipebase",
	"pipederive",
	"pipegen",
	"pipeware/pipebytes",
	"pipeware/pipecql",
	"pipeware/pipecsv",
	"pipeware/pipedynamodb",
	"pipeware/pipejson",
	"pipeware/pipekafka",
	"pipeware/pipekube",
	"pipeware/pipemysql",
	"pipeware/pipepsql",
	"pipeware/piperedis",
	"pipeware/pipereqwest",
	"pipeware/piperocksdb",
	"pipeware/pipes3",
	"pipeware/pipesns",
	"pipeware/pipesqs",
	"pipeware/pipewarp",
]