[workspace]

members = [
	"cargo-pipe",
	"e2e/clients",
	"pipebase",
	"pipederive",
	"pipegen",
	"pipeware/pipeamqp",
	"pipeware/pipeavro",
	"pipeware/pipebytes",
	"pipeware/pipecql",
	"pipeware/pipecsv",
	"pipeware/pipedynamodb",
	"pipeware/pipejson",
	"pipeware/pipekafka",
	"pipeware/pipekube",
	"pipeware/pipemqtt",
	"pipeware/pipemysql",
	"pipeware/pipepsql",
	"pipeware/piperedis",
	"pipeware/pipereqwest",
	"pipeware/piperocksdb",
	"pipeware/pipes3",
	"pipeware/pipesns",
	"pipeware/pipesqs",
	"pipeware/pipewarp",
]