[package]
name = "cargo-pipe"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pipegen = { path = "../pipegen" }
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.1"
toml = "0.5.8"