[package]
name = "cargo-pipe"
version = "0.1.2"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A command-line tool to generate and build data integration app using pipebase framework"
keywords = ["data", "integration", "pipeline", "declarative"]

[dependencies]
anyhow = "1.0"
pipegen = { version = "0.1.2", path = "../pipegen" }
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.1"
toml = "0.5.8"