[package]
name = "cargo-pipe"
version = "0.2.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A command-line tool to generate and build data integration app using pipebase framework"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["data-engineering", "api-integration", "declarative-pipeline"]

[dependencies]
pipegen = { version = "0.2.0", path = "../pipegen" }
clap = "3.0.0-rc.0"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.29"
termcolor = "1.1"
toml = "0.5.8"