[package]
name = "pipebase"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
log = "0.4.14"
tokio = { version = "1.6.1", features = ["full"] }
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
strum = { version = "0.20", features = ["derive"] }
pipederive = { path = "../pipederive" }