[package]
name = "pipebase"
version = "0.1.4"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipebase/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A tokio based runtime library for data integration app"
keywords = ["data-engineering", "api-integration", "declarative-pipeline", "tokio"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
log = "0.4.14"
tokio = { version = "1.6.1", features = ["full"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
strum = { version = "0.20", features = ["derive"] }
pipederive = { version = "0.1.3", path = "../pipederive" }