[package]
name = "pipederive"
version = "0.1.3"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipederive/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "Proc macros for data integration app using pipebase framework"
keywords = ["data", "integration", "pipeline", "declarative"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = { version = "1.0.71", features = ["full"] }
