[package]
name = "pipeext"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipebase = { path = "../pipebase" }
async-trait = "0.1.50"
anyhow = "1.0"
bytes = "1.0.1"
log = "0.4.14"
tokio = { version = "1.6.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
warp = "0.3.1"
