[package]
name = "pipeext"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
byteorder = "1.4.3"
bytes = "1.0.1"
log = "0.4.14"
pipebase = { path = "../pipebase" }
redis = { version = "0.20.2", features = ["tokio-comp"] }
rocksdb = { version = "0.16.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["full"] }
warp = "0.3.1"
