[package]
name = "pipegen"
version = "0.1.4"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipegen/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A generator for data integration app using pipebase framework"
keywords = ["data", "integration", "pipeline", "declarative"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
strum = { version = "0.20", features = ["derive"] }
