[package]
name = "e2e_clients"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
tracing = "0.1"
pipebase = { version = "0.1.9", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
scylla = { version = "0.2.1" }
# https://github.com/mitsuhiko/redis-rs/issues/531#issuecomment-907745857
futures = "0.3"
mysql_async = "0.28.0"
redis = { version = "0.20.2", features = ["tokio-comp"] }
reqwest = "0.11.4"
tokio = { version = "1.6.1", features = ["full"] }
