[package]
name = "e2e_ingest_postgres"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
e2e_clients = { version = "0.1.0", path = "../clients" }
pipebase = { version = "0.2.0", path = "../../pipebase" }
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["full"] }

[features]
itest = []
