[package]
name = "pipebytes"
version = "0.1.4"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipebytes/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using byteorder"
keywords = ["pipebase", "pipeware", "byteorder"]

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
pipebase = { version = "0.1.9", path = "../../pipebase" }