[package]
name = "pipecql"
version = "0.1.1"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipecql/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using scylla"
keywords = ["pipebase", "pipeware", "cassandra", "scylla"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { version = "0.1.1", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
scylla = "0.2.0"