[package]
name = "pipecql"
version = "0.1.5"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipecql/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using scylla"
keywords = ["pipebase", "pipeware", "cassandra", "scylla"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { version = "0.1.6", path = "../../pipebase" }
openssl = "0.10.36"
serde = { version = "1.0", features = ["derive"] }
scylla = { version = "0.2.1", features = ["ssl"] }