[package]
name = "pipecsv"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using csv serde"
keywords = ["pipebase", "pipeware", "csv", "serde"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { version = "0.1.0", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"