[package]
name = "pipedynamodb"
version = "0.1.2"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using aws dynamodb rust sdk"
keywords = ["pipebase", "pipeware", "aws", "dynamodb"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { version = "0.1.5" }
serde = { version = "1.0", features = ["derive"] }
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.12-alpha", package = "aws-sdk-dynamodb" }