[package]
name = "pipedynamodb"
version = "0.1.5"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using aws dynamodb rust sdk"
keywords = ["pipebase", "pipeware", "aws", "dynamodb"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
tracing = "0.1"
pipebase = { version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
dynamodb = { version = "0.4.0", package = "aws-sdk-dynamodb" }