[package]
name = "pipekafka"
version = "0.1.3"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipekafka/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using rdkafka"
keywords = ["pipebase", "pipeware", "kafka", "rdkafka"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { version = "0.1.2", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
rdkafka = { version = "0.26", features = ["cmake-build"] }
tokio = { version = "1.6.1", features = ["sync"] }