[package]
name = "pipekube"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
bytes = "1.0.1"
futures = { version = "0.3.15", default-features = false }
log = "0.4.14"
pipebase = { path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
kube = "0.58.1"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.6.1", features = ["sync"] }