[package]
name = "pipekube"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipekube/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using kubernetes rust sdk"
keywords = ["pipebase", "pipeware", "k8s"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
bytes = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.15", default-features = false }
log = "0.4.14"
pipebase = { version = "0.1.0", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
kube = "0.58.1"
kube-runtime = "0.58.1"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.6.1", features = ["sync"] }