[package]
name = "pipemqtt"
version = "0.1.4"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
homepage = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipemqtt/"
readme = "README.md"
description = "A pipebase plugin using rumqttc"
keywords = ["pipebase", "pipeware", "mqtt"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
tracing = "0.1"
rumqttc = "0.8.0"
pipebase = { version = "0.1.9", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.1", features = ["rt", "sync"] }
