[package]
name = "pipepsql"
version = "0.1.3"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipepsql/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using tokio_postgres"
keywords = ["pipebase", "pipeware", "postgres"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { version = "0.1.3", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.1", features = ["rt"] }
tokio-postgres = "0.7.2"
