[package]
name = "pipepsql"
version = "0.2.1"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipepsql/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using tokio_postgres"
keywords = ["pipebase", "pipeware", "postgres"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
tracing = "0.1"
pipebase = { version = "0.1.9", path = "../../pipebase" }
openssl = "0.10.36"
postgres-openssl = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.1", features = ["rt"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4"] }
