[package]
name = "piperedis"
version = "0.1.2"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/piperedis/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using redis rust client"
keywords = ["pipebase", "pipeware", "redis"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { version = "0.1.2", path = "../../pipebase" }
pipebytes = { version = "0.1.2", path = "../pipebytes" }
redis = { version = "0.20.2", features = ["tokio-comp", "aio"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.1", features = ["sync"] }
tokio-stream = "0.1.7"
