[package]
name = "pipereqwest"
version = "0.1.5"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/pipereqwest/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using reqwest"
keywords = ["pipebase", "pipeware", "reqwest"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
tracing = "0.1"
pipebase = { version = "0.2.0", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.4"
tokio = { version = "1.6.1", features = ["full"] }