[package]
name = "piperocksdb"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { path = "../../pipebase" }
pipebytes = { path = "../pipebytes" }
rocksdb = { version = "0.16.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.1", features = ["rt", "sync", "macros"] }