[package]
name = "piperocksdb"
version = "0.1.4"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
documentation = "https://docs.rs/piperocksdb/"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using rocksdb rust wrapper"
keywords = ["pipebase", "pipeware", "rocksdb"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
tracing = "0.1"
pipebase = { version = "0.1.9", path = "../../pipebase" }
pipebytes = { version = "0.1.4", path = "../pipebytes" }
rocksdb = { version = "0.16.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.1", features = ["rt", "sync", "macros"] }