[package]
name = "pipesqs"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
log = "0.4.14"
pipebase = { path = "../../pipebase" }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.1", features = ["full"] }
sqs = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.12-alpha", package = "aws-sdk-sqs" }