[package]
name = "pipewarp"
version = "0.1.0"
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pipebase/pipebase"
homepage = "https://github.com/pipebase/pipebase"
readme = "README.md"
description = "A pipebase plugin using warp"
keywords = ["pipebase", "pipeware", "warp"]

[dependencies]
async-trait = "0.1.50"
anyhow = "1.0"
bytes = "1.0.1"
log = "0.4.14"
pipebase = { version = "0.1.0", path = "../../pipebase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["sync"] }
warp = "0.3.1"